--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class=".banner">
+  <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt>
     <div class="banner-content">
       <h2> Giant space moths invade Earth </h2>
